# RadPhysicsMPHY604

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_apps.py  run_single_app.py  setup.sh
apps/compton_scattering/: compton_app.py
apps/pair_production/: pair_app.py
apps/photodisintegration/: photo_nuclear_app.py
apps/photoelectric/: photoelectric_app.py
apps/rayleigh_scattering/: rayleigh_app.py
apps/thomson_scattering/: thomson_app.py
apps/triplet_production/: triplet_app.py
shared/: physics_calculations.py  physics_constants.py  plotting_utils.py
