[project]
name = "radphysics-mphy604"
version = "0.1.0"
description = "Interactive web applications for graduate-level radiation physics education"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
]

[project.scripts]
radphysics = "run_apps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
